src/objects/LITC_Session_Feedback__c.object
<CustomObject>
    <description>To capture feedback on Sessions by Session attendees: Created by Preeti Grover on 21/08/2014</description>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date when the session was held</description>
        <formula>DATEVALUE(Session__r.Session_Start_Date_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date when the session was held</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <inlineHelpText>Feedback on the session</inlineHelpText>
        <label>Feedback</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>I_will_be_able_to_apply__c</fullName>
        <label>I can apply it to my daily job</label>
        <picklist>
            <picklistValues>
                <fullName>Very</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Speakers__c</fullName>
        <formula>Session__r.Key_Speakers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Speakers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_this_Session_Overall__c</fullName>
        <inlineHelpText>Rate the session based on your experience</inlineHelpText>
        <label>Rate this Session Overall</label>
        <picklist>
            <picklistValues>
                <fullName>Terrific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Well Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pretty Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Was Hoping for More</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <description>Session to which the feedback is related</description>
        <inlineHelpText>The session for which the feedback is applicable</inlineHelpText>
        <label>Session</label>
        <referenceTo>LITC_Session__c</referenceTo>
        <relationshipLabel>Feedback on this Session</relationshipLabel>
        <relationshipName>Sessions_Feedback</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Session_content_met_my_expectations__c</fullName>
        <label>Session content met my expectations</label>
        <picklist>
            <picklistValues>
                <fullName>Very Well</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could be better</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poorly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Session_objectives_were_clearly_stated__c</fullName>
        <label>Session objectives were clearly stated</label>
        <picklist>
            <picklistValues>
                <fullName>Very Well</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could be better</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poorly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Speakers_had_mastery_of_subject_matter__c</fullName>
        <label>Speakers had mastery of subject matter</label>
        <picklist>
            <picklistValues>
                <fullName>Very Well</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could be better</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poorly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Session Feedback</label>
    <nameField>
        <displayFormat>SF-{0000}</displayFormat>
        <label>Feedback Title</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sessions Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LITC_Only_Owners_can_Edit_Their_Feedback</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISNEW(), false, CreatedById &lt;&gt; $User.Id )</errorConditionFormula>
        <errorMessage>You can only edit your own feedback</errorMessage>
    </validationRules>
</CustomObject>